@@ -23,6 +23,7 @@ class IVideo(interface.Interface):
     """
 
     title = schema.TextLine(title=u'Video Title', required=False)
+    description = schema.Text(title=u'Description', required=False)
     file = p4afile.FileField(title=u'File', required=False)
     width = schema.Int(title=u'Width', required=False, readonly=True)
     height = schema.Int(title=u'Height', required=False, readonly=True)
@@ -30,32 +31,19 @@ class IVideo(interface.Interface):
 
     video_image = p4aimage.ImageField(title=u'Video Image', required=False,
                                       preferred_dimensions=(320, 240))
-    # year = schema.Int(title=u'Year', required=False)
-    # genre = schema.Choice(title=u'Genre', required=False, 
-    #                       vocabulary=genre.GENRE_VOCABULARY)
-    # comment = schema.Text(title=u'Comment', required=False)
-    # 
-    # variable_bit_rate = schema.Bool(title=u'Variable Bit Rate',
-    #                                 readonly=True)
-    # bit_rate = schema.Int(title=u'Bit Rate',
-    #                       readonly=True)
-    # frequency = schema.Int(title=u'Frequency',
-    #                        readonly=True)
-    # length = schema.Int(title=u'Length',
-    #                     readonly=True)
 
-    video_type = schema.TextLine(title=u'Video Type', 
-                                 required=True, 
+    video_type = schema.TextLine(title=u'Video Type',
+                                 required=True,
                                  readonly=True)
 
 class IVideoDataAccessor(interface.Interface):
     """Video implementation accessor (ie mov, wma, flv).
     """
-    
-    video_type = schema.TextLine(title=u'Video Type', 
-                                 required=True, 
+
+    video_type = schema.TextLine(title=u'Video Type',
+                                 required=True,
                                  readonly=True)
-    
+
     def load(filename):
         pass
     def store(filename):
@@ -64,7 +52,7 @@ class IVideoDataAccessor(interface.Interface):
 class IMediaPlayer(interface.Interface):
     """Media player represented as HTML.
     """
-    
+
     def __call__(downloadurl, imageurl):
         """Return the HTML required to play the video content located
         at *downloadurl* with the *imageurl* representing the video.
